--- a/lab1/communities/templates/communities/communities.html
+++ b/lab1/communities/templates/communities/communities.html
@@ -1,3 +1,9 @@
+{% extends 'layout.html' %}
+{% block title %}
+    Главная страница
+{% endblock %}
+
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="ru">
@@ -8,6 +14,8 @@
     <title>Communities</title>
 </head>
 <body>
+    {% block content %}
     <h1>Communities</h1>
+    {% endblock %}
 </body>
 </html>
