--- a/lab1/templates/about.html
+++ b/lab1/templates/about.html
@@ -1,3 +1,8 @@
+{% extends 'layout.html' %}
+{% block title %}
+    Главная страница
+{% endblock %}
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -8,7 +13,9 @@
     <title>Обо мне</title>
 </head>
 <body>
+    {% block content %}
     <h1>Страница обо мне</h1>
+    {% endblock %}
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
