--- a/lab1/templates/main.html
+++ b/lab1/templates/main.html
@@ -1,5 +1,11 @@
+{% extends 'layout.html' %}
+{% block title %}
+    Главная страница
+{% endblock %}
+
 <!DOCTYPE html>
 {% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +14,11 @@
     <title>Главная</title>
 </head>
 <body>
+
+
+    {% block content %}
     <h1>Главная страница</h1>
+    {% endblock %}
     <script src="{% static 'js/script_main.js' %}"></script>
 </body>
 </html>
