--- a/lab1/templates/layout.html
+++ b/lab1/templates/layout.html
@@ -14,6 +14,8 @@
             <a href="/about">Обо мне </a>
             <a href="{% url 'posts:list' %}"> Посты</a>
             <a href="{% url 'community:list' %}">Сообщества </a>
+            <a href="{% url 'users:register' %}">Регистрация</a>
+            <a href="{% url 'users:login' %}">Вход</a>
         </nav>
         <main>{% block content %} {% endblock %}</main>
     </body>
